# ao3tagblockgenerator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ao3tagblockgenerator/: __init__.py  cli.py
tests/: test_cli.py
