[build-system]
requires = ["setuptools>=61","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ao3tagblockgenerator"
version = "0.0.1"
description = "AO3 tag block generator (prototype)"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "KHempel" } ]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
